[gd_scene load_steps=10 format=3 uid="uid://ciqrpd5675boy"]

[ext_resource type="Script" path="res://player/player.gd" id="1_pdbxc"]
[ext_resource type="Script" path="res://player/camera_controller.gd" id="2_2fob2"]
[ext_resource type="PackedScene" uid="uid://c0mo8tek77du4" path="res://player/character_skin.tscn" id="3_ufinh"]
[ext_resource type="AudioStream" uid="uid://bx0t7f2nuk2lr" path="res://player/sounds/step.wav" id="4_34m2q"]
[ext_resource type="AudioStream" uid="uid://cbcb2d63weegs" path="res://player/sounds/landing.wav" id="5_5rkfj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8x2xm"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_gqx4v"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_2ooex"]
dof_blur_far_enabled = true
dof_blur_far_distance = 45.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s5n07"]

[node name="Player" type="CharacterBody3D" groups=["damageables"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_pdbxc")
move_speed = null
bullet_speed = 14.0
attack_impulse = null
acceleration = 6.0
jump_initial_impulse = null
jump_additional_force = null
rotation_speed = null
stopping_speed = null
max_throwback_force = null
shoot_cooldown = null
grenade_cooldown = null

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8x2xm")

[node name="CameraController" type="Node3D" parent="."]
top_level = true
script = ExtResource("2_2fob2")
invert_mouse_y = true
tilt_upper_limit = 0.48
tilt_lower_limit = -0.8

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(-1, -5.15034e-15, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, 0, 2.33984, 0)
shape = SubResource("SeparationRayShape3D_gqx4v")
spring_length = 6.0

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraSpringArm"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, 1.42109e-14, 2.38419e-07, 10)

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(-1, -3.71248e-14, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, -8.74228e-07, 6.04006, -9.29023)
top_level = true
attributes = SubResource("CameraAttributesPractical_2ooex")
fov = 50.0

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(0, 0, 0, 0)

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_s5n07")
target_position = Vector3(0, -2.6, 0)
margin = 0.5
max_results = 1
debug_shape_custom_color = Color(0.658824, 1, 0, 1)

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="CharacterSkin" parent="CharacterRotationRoot" instance=ExtResource("3_ufinh")]

[node name="StepSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_34m2q")

[node name="LandingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_5rkfj")

[connection signal="foot_step" from="CharacterRotationRoot/CharacterSkin" to="." method="play_foot_step_sound"]
